added checking for empty source and category fields